--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "tailwindcss": "^3.4.17",
     "vite": "^4.4.5"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "description": "A React-based bus tracking system that allows students to log in and view their bus information.",
   "main": "eslint.config.js",
   "keywords": [],
