--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,13 @@ services:
   - type: web
     name: bus-tracking-system
     env: static
-    buildCommand: npm install && npm run build
+    buildCommand: npm ci && npm run build
     staticPublishPath: ./dist
+    envVars:
+      - key: NPM_CONFIG_PRODUCTION
+        value: false
+      - key: NODE_VERSION
+        value: 18
     routes:
       - type: rewrite
         source: /*
