fix: resolve Render deployment yarn conflict completely
- Remove packageManager field from package.json to prevent platform conflicts
- Enhance render.yaml with explicit npm-only build commands
- Strengthen .npmrc configuration with engine-strict and yarn prevention
- Add comprehensive yarn disabling in .yarnrc and .yarnrc.yml
- Clean build verification shows npm-only operation successful
- All yarn-related conflicts eliminated for Render deployment

Fixes: Error 'packageManager: yarn@npm@9.8.1' causing deployment failures

--- a/.npmrc
+++ b/.npmrc
@@ -9,4 +9,12 @@ node-version=18
 
 # Production settings
 production=false
+
+# Prevent yarn usage
+engine-strict=true
+ignore-scripts=false
+
+# Ensure npm is used for installs
+fund=false
+audit=false
 audit=false
