--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,7 @@
-# Force npm usage - disable yarn
+# Force npm usage - disable yarn completely
 # This project uses npm exclusively
+# Prevent any yarn commands from running
+
+disable-self-update-check true
+--install.ignore-engines true
+--install.check-files false
