fix: remove main field and eslint.config.js for static site deployment
- Remove 'main': 'eslint.config.js' from package.json (was causing Node.js execution)
- Delete eslint.config.js file (Render was trying to execute it)
- Enhanced render.yaml with explicit static site configuration
- Removed package-lock.json to prevent package manager conflicts
- Fixes 'Application exited early' error on Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,13 @@ services:
     name: bus-tracking-system
     env: static
     buildCommand: |
+      echo "Building static React app for Render..."
       npm --version
       node --version
       rm -rf node_modules package-lock.json
       npm ci --only=production=false
       npm run build
+      echo "Build completed successfully!"
     staticPublishPath: ./dist
     envVars:
       - key: NPM_CONFIG_PRODUCTION
