--- a/render.yaml
+++ b/render.yaml
@@ -2,22 +2,11 @@ services:
   - type: web
     name: bus-tracking-system
     env: static
-    buildCommand: |
-      echo "Building static React app for Render..."
-      npm --version
-      node --version
-      rm -rf node_modules package-lock.json
-      npm ci --only=production=false
-      npm run build
-      echo "Build completed successfully!"
+    buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     envVars:
-      - key: NPM_CONFIG_PRODUCTION
-        value: false
       - key: NODE_VERSION
         value: 18.19.0
-      - key: NPM_CONFIG_ENGINE_STRICT
-        value: true
     routes:
       - type: rewrite
         source: /*
