--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,14 @@
 services:
   - type: web
-    name: bus-tracking-system
+    name: bus-tracking-system-static
     env: static
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     envVars:
       - key: NODE_ENV
         value: production
       - key: NODE_VERSION
         value: 18.19.0
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: public, max-age=3600
     routes:
       - type: rewrite
         source: /*
