--- a/.renderignore
+++ b/.renderignore
@@ -7,6 +7,16 @@ eslint.config.js
 yarn.lock
 package-lock.json
 
+# Exclude all loose JS files in root (keep only package.json, vite.config.js, etc.)
+create-*
+debug-*
+final-*
+load-*
+sample-*
+test-*
+update-*
+verify-*
+
 # Source files (only dist should be served)
 src/
 backend/
@@ -15,14 +25,6 @@ bus/
 # Test files
 *.test.js
 *.spec.js
-test-*
-debug-*
-sample-*
-create-*
-update-*
-verify-*
-load-*
-final-*
 
 # Node.js files (not needed for static site)
 node_modules/
