--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vite": "^4.4.5"
   },
   "engines": {
-    "node": "18.19.0"
+    "node": ">=18.0.0"
   },
   "homepage": ".",
   "description": "A React-based bus tracking system static site",
