🔧 FINAL STATIC SITE FIX: Force Render to treat as static site
PROBLEM: Render still trying to run 'node eslint.config.js' during deployment

SOLUTIONS APPLIED:
✅ Added explicit start script that fails (forces static detection)
✅ Enhanced render.yaml with static routes and env vars
✅ Added .node-version file (18.19.0)
✅ Added .render-buildpack with static buildpack specification
✅ Enhanced package.json with buildpack and heroku-prebuild fields
✅ Used npm ci instead of npm install for faster, reliable builds

EXPECTED RESULT:
- Render will detect this as static site ONLY
- No more Node.js execution attempts
- Clean static site deployment

Build Command: npm ci && npm run build
Publish Path: ./dist
Site Type: STATIC ONLY

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode production",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "echo 'This is a static site - use npm run build instead' && exit 1"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -33,6 +34,8 @@
   "homepage": ".",
   "description": "A React-based bus tracking system static site",
   "keywords": ["react", "vite", "static-site"],
+  "buildpack": "static",
+  "heroku-prebuild": "echo 'Static site - no prebuild needed'",
   "author": "",
   "license": "ISC"
 }
