--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --mode production",
-    "preview": "vite preview",
-    "start": "echo 'This is a static site - use npm run build instead' && exit 1"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -34,8 +33,6 @@
   "homepage": ".",
   "description": "A React-based bus tracking system static site",
   "keywords": ["react", "vite", "static-site"],
-  "buildpack": "static",
-  "heroku-prebuild": "echo 'Static site - no prebuild needed'",
   "author": "",
   "license": "ISC"
 }
