--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,6 @@
 services:
   - type: static
     name: bus-tracking-system
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build
     publishPath: ./dist
-    envVars:
-      - key: NODE_ENV
-        value: production
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+    pullRequestPreviewsEnabled: false
